# Hand_Eye_Calibration

./: .gitignore  CLAUDE.md  README.md  auto_capture_samples.sh  calibration_result_20251210_112241.yaml  calibration_result_20260224_170721.yaml  calibration_samples.npz  calibration_samples_eye_in_hand.npz  calibration_samples_eye_on_base.npz  checklist.md  hand_eye_calibration.md  test_collector.sh  verification.md  verification_pipeline.md  wsl2_setup.md
src/hand_eye_calibration/: DETECTOR_ANALYSIS.md  QUICK_START.md  Readme.md  USAGE_GUIDE.md  package.xml  setup.cfg  setup.py
src/hand_eye_calibration/config/: checkerboard_params.yaml  poses.yaml
src/hand_eye_calibration/hand_eye_calibration/: calibration_collector_node.py  calibration_collector_node_sup.py  checkerboard_detector_node.py  checkerboard_detector_node_backup.py  mock_robot_publisher_node.py  tf_to_pose_publisher.py  verification_node.py
src/hand_eye_calibration/launch/: hand_eye_prep.launch.py
src/hand_eye_calibration/scripts/: auto_capture.py  validate_detector.py
